<resources>
    <string name="app_name">Simply Illustrate</string>
    <string name="examples_user">Examples User</string>
    <string name="simply_illustrate_user_gmail_com">simply_illustrate_user@gmail.com</string>
    <string name="questions">Questions</string>
    <string name="posts">Posts</string>
    <string name="learning">Learning</string>
    <string name="subheader">User Settings</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="submit_text">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="ask_create_account">No account yet? Create one.</string>
    <string name="ask_sign_in">Already have an account? Sign In.</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="text_in_recycler_view_list_item">Text in recycler view list item</string>
    <string name="answer1">Answer1</string>
    <string name="answer2">Answer2</string>
    <string name="answer3">Answer3</string>
    <string name="answer4">Answer4</string>
    <string name="one">1.  </string>
    <string name="two">2.  </string>
    <string name="three">3.  </string>
    <string name="four">4.  </string>
    <string name="question">Q.  </string>
</resources>
