<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="8dp"
    tools:context=".activity.PracticeQuestionDetails">

    <TextView
        android:id="@+id/question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="6dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="#B4C1CC"
        android:elevation="0dp"
        android:text="@string/answer1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="#B4C1CC"
        android:elevation="0dp"
        android:text="@string/answer2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="#B4C1CC"
        android:elevation="0dp"
        android:text="@string/answer3"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="#B4C1CC"
        android:elevation="0dp"
        android:text="@string/answer4"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3" />

</androidx.constraintlayout.widget.ConstraintLayout>